// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders correctly 1`] = `
Array [
  <div />,
  <div>
    <nav
      data-cy="topic-tags"
    >
      <ArticleTopics />
    </nav>
  </div>,
  <div>
    <div />
  </div>,
  <div
    id="related-articles"
  >
    <RelatedArticles
      isVisible={true}
    />
    <div>
      RecommendedFetch
    </div>
  </div>,
  <div>
    <h2>
      Sponsored
    </h2>
    <div
      data-parent="group-3"
      id="advert-inarticle-native-1"
    />
    <div
      data-parent="group-3"
      id="advert-inarticle-native-2"
    />
  </div>,
  <ArticleComments
    articleId="dummy-article-id"
    commentingConfig={
      Object {
        "account": "sp_pCQgrRiN",
      }
    }
    isCommentEnabled={true}
    isEnabled={true}
  />,
]
`;

exports[`2. no topics and comments when user not logged in, only related articles and sponsored div 1`] = `
Array [
  <div
    id="related-articles"
  >
    <RelatedArticles
      isVisible={true}
    />
  </div>,
  <div>
    <h2>
      Sponsored
    </h2>
    <div
      data-parent="group-3"
      id="advert-inarticle-native-1"
    />
    <div
      data-parent="group-3"
      id="advert-inarticle-native-2"
    />
  </div>,
]
`;

exports[`3. read only comments when the user is a share token reader 1`] = `
Array [
  <div />,
  <div>
    <nav
      data-cy="topic-tags"
    >
      <ArticleTopics />
    </nav>
  </div>,
  <div>
    <div />
  </div>,
  <div
    id="related-articles"
  >
    <RelatedArticles
      isVisible={true}
    />
    <div>
      RecommendedFetch
    </div>
  </div>,
  <div>
    <h2>
      Sponsored
    </h2>
    <div
      data-parent="group-3"
      id="advert-inarticle-native-1"
    />
    <div
      data-parent="group-3"
      id="advert-inarticle-native-2"
    />
  </div>,
  <ArticleComments
    articleId="dummy-article-id"
    commentingConfig={
      Object {
        "account": "sp_pCQgrRiN",
      }
    }
    isCommentEnabled={true}
    isEnabled={true}
  />,
]
`;

exports[`4. renders the additional related articles 1`] = `
Array [
  <div />,
  <div>
    <nav
      data-cy="topic-tags"
    >
      <ArticleTopics />
    </nav>
  </div>,
  <div>
    <div />
  </div>,
  <div
    id="related-articles"
  >
    <RelatedArticles
      isVisible={true}
    />
    <div>
      RecommendedFetch
    </div>
  </div>,
  <div>
    <h2>
      Sponsored
    </h2>
    <div
      data-parent="group-3"
      id="advert-inarticle-native-1"
    />
    <div
      data-parent="group-3"
      id="advert-inarticle-native-2"
    />
  </div>,
  <ArticleComments
    articleId="dummy-article-id"
    commentingConfig={
      Object {
        "account": "sp_pCQgrRiN",
      }
    }
    isCommentEnabled={true}
    isEnabled={true}
  />,
]
`;
